--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   padding: 20px;
   background-color: #f0f0f0;
-  background-image: url('../background.jpg');
+  background-image: url('background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
